--- a/index.style.css
+++ b/index.style.css
@@ -273,6 +273,9 @@ transition: .3s ease-in;
     content: "";
     background-color: #44d8a7;
 }
+span {
+    color: #44d8a7;
+}
 .card--group {
     display: flex;
     gap: 2.5em;
@@ -304,10 +307,91 @@ align-items: center;
 gap: 2em;
 padding: 40px;
 }
+
 .count-1 {
     padding: 20px;
-border-left: 3.5px solid #44d8a7;
+    border-left: 3.5px solid #44d8a7;
+    padding-left: 75px;
 }
 .count-1:first-child{
     border: none;
+}
+
+/* footer */
+footer {
+    white-space: nowrap;
+
+    background-color: #1c2833 ;
+    padding: 3.4%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    justify-content: center;
+
+    color: white;
+    gap: 2em;
+
+}
+
+.first-section,
+.second-section,
+.third-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+}
+
+.first-section p {
+    transition: .2s ease;
+
+}
+
+.first-section p:hover {
+    color: #5dc5cf;
+}
+
+.second-section .language-group {
+    /* display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
+     */
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5em;
+}
+
+.second-section .language-group>p {
+    padding: .55em;
+    transition: .2s ease;
+}
+
+.second-section .language-group p:hover {
+    background-color: #5dc5cf;
+    border-radius: .25em;
+    transition: .2s ease;
+}
+
+.third-section .social-media {
+    display: flex;
+    gap: 2em;
+}
+
+.third-section .social-media img {
+    width: 2em;
+
+}
+
+.third-section .social-media img:hover {}
+
+.privacy-policy {
+    display: flex;
+    grid-column: span 1 / 3;
+
+    white-space: nowrap;
+    gap: 1em;
+    color: #dddde1;
+
+}
+
+.privacy-policy p:hover {
+    text-decoration: underline;
 }
