course added (need to styling)

--- a/index.style.css
+++ b/index.style.css
@@ -1,14 +1,30 @@
 * {
     margin: 0;
     font-family: 'Roboto', monospace, sans-serif;
+    
 }
+body {
+    animation: fadeIn 3s;
+}
+@keyframes fadeIn {
+    from {
+        transform: translateY(-5%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
 nav {
     padding: 10px;
     display: flex;
     align-items: center;
     
     justify-content: space-around;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+    
 }
 nav .logo--link{
     text-decoration: none;
@@ -33,6 +49,7 @@ nav .logo--link{
 }
 .drop--down {
     transition: .3s ease;
+   
 }
 .drop--down--item {
     display: none;
@@ -42,12 +59,16 @@ nav .logo--link{
     opacity: 0;
     transition: .3s ease;
 }
-.drop--down .drop--down--item .item {
+ .item {
     display: flex;
     align-items: center;
     gap: 1em;
 }
-.item:hover .item::after {
+.item:hover{    
+    color: #44d8a7;
+    transition: .3s ease;
+}
+/* .item:hover .item::after {
     content: "";
     padding: 20px;
     background-color: darkcyan;
@@ -56,7 +77,7 @@ nav .logo--link{
     background-repeat: no-repeat;
     background-size: 30px;
     transition: .3s ease-in-out;
-}
+} */
 .drop--down .drop--down--item .item > img {
     width: 40px ;
     height: auto;
@@ -73,28 +94,39 @@ font-size: 120%;
 width: 300px;
 padding: 20px;
 
+
 transition: .3s ease-in;
 }
 
 
 .user--auth {
+    
 }
 .user--auth > button {
+    
     width: 100px;
     font-size: 120%;
     border: none;
     padding: 5px;
     border-radius: 9.5px;
-    background-color: dodgerblue;
- 
+    background-color: #1c2833;
+    
 }
+.btn--sign-in a {
+    color: #1c2833;
+}
+.btn--login a {
+    color: white;
+}
+
 .user--auth .btn--sign-in {
     background-color: white;
 }
 
 /* introduction sectoin */
 .introduction {
-    
+    margin-top: 100px;
+    height: 80vh;
 }
 .intro {
     display: flex;
@@ -111,19 +143,29 @@ transition: .3s ease-in;
     flex-direction: column;
     gap: 1em;
 }
-.intro > div h1:first-child {
-
-}
 .intro div button {
-    background-color: dodgerblue;
     padding: 10px;
-    font-size: 105%;
+    font-size: 90%;
     border: none;
     border-radius: 9.5px;
     letter-spacing: 2px;
+    width: 45%;
+    border: 2px solid #1c2833;
+
+    transition: .3s ease;
+}
+.intro div button:hover {
+background-color: #1c2833;
+/* border: 2px solid #44d8a7; */
+color: white;
+transition: .3s ease;
+}
+.intro div button:hover a {
+    color: white;transition: .3s ease;
 }
 .intro div button a {
     text-decoration: none;
+    color: #1c2833;transition: .3s ease;
 }
 .social-media {
     padding: 10px;
@@ -136,6 +178,7 @@ transition: .3s ease-in;
 }
 
 /* learn anywhere */
+
 .learn-anywhere {
     background-color:   #1c2833  ;
     display: flex;
@@ -143,13 +186,17 @@ transition: .3s ease-in;
     align-items: center;
     height: 100vh;
 }
+.skill {
+    color: dodgerblue;
+    font-weight: bold;
+}
 .learn-anywhere--content{
     display: flex;
     flex-direction: column;
     gap: 1.5em;
     font-size: 160%;
     color: white;
-    background-color: #7da4c9;
+
     width: 700px;
     height: 100%;
     border-top-right-radius:29.5px;
@@ -347,7 +394,7 @@ footer {
 }
 
 .first-section p:hover {
-    color: #5dc5cf;
+    color: #44d8a7;
 }
 
 .second-section .language-group {
@@ -365,7 +412,7 @@ footer {
 }
 
 .second-section .language-group p:hover {
-    background-color: #5dc5cf;
+    background-color: #44d8a7;
     border-radius: .25em;
     transition: .2s ease;
 }
