--- a/tutorial.style.css
+++ b/tutorial.style.css
@@ -96,8 +96,9 @@ a {
 
 /* main section */
 main {
-    gap: 1em;
+	gap: 1em;
     margin-left: 350px;
+	margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr .5fr;
 }
@@ -109,11 +110,13 @@ main {
 }
 .video--player {
     border-bottom:  2px solid #44d8a7;
+	border-radius: 8.5px;
+	margin-bottom: 5px;
 }
 .video--player  video{
-    width: 97%;
+	width: 98%;
     
-    border-radius: 1px solid red;
+    
     padding: 10px;
     
     
@@ -154,11 +157,18 @@ border: 1px solid gray;
 padding: 15px;
 
 }
+.tutorial--btn--group > p:hover {
+	background-color:  #abb2b9 ;
+}
 .attach-files {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     text-align: center;
+	
+}
+.attach-files > p:hover {
+	background-color:  #abb2b9 ;
 }
 
 /* tutorial course module */
@@ -168,6 +178,7 @@ padding: 15px;
     gap: 2em; */
 }
 .module--list {
+	margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 2em;
@@ -183,8 +194,22 @@ padding: 15px;
 }
 .tutorial-1 {
 display: grid;
-grid-template-columns: .5fr 1fr .3fr;
+grid-template-columns: .2fr 1fr .3fr;
     align-items: center;
+	padding: 3px;
+	border-radius: 4.5px;
+}
+.tutorial-1:hover{
+	background-color:  #85c1e9 ;
+}
+.btn {
+	border: 2px solid dodgerblue;
+	padding: 5px 15px;
+	transition: .3s ease;
+}
+.btn:hover{
+	background-color: #44d8a7;
+	transition: .3s ease;
 }
 
 
