--- a/index.style.css
+++ b/index.style.css
@@ -151,7 +151,7 @@ transition: .3s ease-in;
     letter-spacing: 2px;
     width: 45%;
     border: 2px solid #1c2833;
-
+    background-color: #fff;
     transition: .3s ease;
 }
 .intro div button:hover {
@@ -210,12 +210,16 @@ transition: .3s ease;
 }
 .btn--courses > a{
     text-decoration: none;
-    background-color: #374641;
+    background-color: #44d8a7;
+    color: #fff;
     padding: 7px 20px;
     border-radius: 5.5px;
+    transition: .3s ease;
 }
 .btn--courses > a:hover {
-    background-color: #44d8a7;
+    background-color: #fff;
+    color: #1c2833;
+    transition: .3s ease;
 }
 
 .learn-anywhere--garalley {
